--- a/styles/index-styles/index.scss
+++ b/styles/index-styles/index.scss
@@ -15,7 +15,7 @@ body {
     margin: 0 5vw;
     padding: 0;
     overflow: hidden;
-    @media(min-width: 1280px){
+    @media(min-width: $large){
         max-width: 1280px;
         overflow: hidden;
         margin: 0 auto;
@@ -24,7 +24,7 @@ body {
 
 .tasks {
     width: 100%;
-    @media(min-width: 1024px){
+    @media(min-width: $medium){
         width: 45%;
     }
 }
@@ -34,7 +34,7 @@ body {
     width: 90%;
     height: 40px;
     margin: 20px auto 0 auto;
-    @media(min-width: 1024px) {
+    @media(min-width: $medium) {
         width: 100%;
     }
     &__input{
@@ -61,7 +61,7 @@ body {
 
 .mainScreen {
     display: block;
-    @media(min-width: 1024px) {
+    @media(min-width: $medium) {
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
@@ -82,14 +82,14 @@ body {
     align-items: center;
     margin-top: 20px;
     font-size: 1.2rem;
-    @media(min-width: 1024px) {
+    @media(min-width: $medium) {
         font-size: 1.6rem;
     }
 }
 
 .lessons {
     width: 100%;
-    @media(min-width: 1024px) {
+    @media(min-width: $medium) {
         width: 45%;
     }
     .lesson{
@@ -100,7 +100,7 @@ body {
         border-bottom: 3px solid white;
         padding: 15px 0;
         margin: 0 auto;
-        @media(min-width: 1024px){
+        @media(min-width: $medium){
             width: 100%;
         }
         &:nth-of-type(1) {
@@ -108,7 +108,7 @@ body {
         }
         &__title{  
             font-size: .8rem;
-            @media(min-width: 1024px) {
+            @media(min-width: $medium) {
                 font-size: 1rem;
             }
         }
@@ -130,14 +130,14 @@ body {
     grid-template-rows: auto auto;
     border-bottom: 3px solid white;
     padding: 5px 0;
-    @media(min-width: 1024px){
+    @media(min-width: $medium){
         width: 100%;
     }
     &__title{
         grid-column: 1/2;
         font-size: .8rem;
         padding: 5px 10px;
-        @media(min-width: 1024px) {
+        @media(min-width: $medium) {
             font-size: 1rem;
         }
     }
@@ -161,7 +161,7 @@ body {
 .doneTasks, .challanges{
     width: 100%;
     margin: 20px 0;
-    @media(min-width: 1024px) {
+    @media(min-width: $medium) {
         width: 45%;
     }
 }
