--- a/styles/navigation-styles/navigation.scss
+++ b/styles/navigation-styles/navigation.scss
@@ -11,24 +11,23 @@
     align-items: center;
     font-size: 1.2rem;
     height: 100px;
-    border-bottom: 2px solid white;
+    border-bottom: 3px solid white;
     max-width: 1280px;
-    @media(max-width: 800px){
+    @media(max-width: $small){
         font-size: 1rem;
         justify-content: space-around
     }
     &__element {
         text-decoration: none;
-        padding: 10px 25px;
+        padding: 10px 5px;
         margin: 0 5px;
         color: $text-color;
         font-weight: bold;
         box-sizing: border-box;
-        @media(max-width: 520px){
-            padding: 10px 5px;
-        }
-        @media(max-width: 400px){
-            font-size: .7rem;
+        font-size: .7rem;
+        @media(min-width: $extraSmall){
+            font-size: 1rem;
+            padding: 10px 25px;
         }
     }
     &__logOut {
@@ -40,17 +39,15 @@
         border-radius: 20px;
         box-sizing: border-box;
         min-width: 160px;
-        @media(max-width: 520px){
-            padding: 10px 5px;
-        }
-        @media(max-width: 400px){
+        @media(max-width: $extraSmall){
             font-size: .7rem;
+            padding: 10px 5px;
         }
     }
     &__header {
         font-size: 1.4rem;
         box-sizing: border-box;
-        @media(max-width: 800px){
+        @media(max-width: $small){
             display: none;
         }
     }
